# kysync

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Config.h  Monitor.cc  Monitor.cpp  Monitor.h  README.md  kydeps.config.cmake  kydeps_sha256_Darwin_Debug.cmake  kydeps_sha256_Darwin_Release.cmake  kydeps_sha256_Linux_Debug.cmake  kydeps_sha256_Linux_Release.cmake  kydeps_sha256_Windows_Debug.cmake  kydeps_sha256_Windows_Release.cmake  main.cc  main.cpp  path_config.h.in  test.cpp  tests.cc  tests.cpp  todo.md  todo.txt  wcs.cpp  zsync.cmake  zsync.patch
analysis/: analyze.py  convert.py  ec2_manager.py  ec2_tester.py  graphs.py  package-list.txt  perf_comparator.py  readme.md  run_perf_comparison.py  run_perf_tests.py  scratch.py  utils.py
checksums/: StrongChecksum.cc  StrongChecksum.cpp  StrongChecksum.h  StrongChecksumBuilder.cc  StrongChecksumBuilder.cpp  StrongChecksumBuilder.h  scs.cpp  scs.h  wcs.cc  wcs.cpp  wcs.h
commands/: Command.cc  Command.cpp  Command.h  PrepareCommand.cc  PrepareCommand.cpp  PrepareCommand.h  SyncCommand.cc  SyncCommand.cpp  SyncCommand.h
doc/: todo.md
docs/: index.md
kylibs/: CMakeLists.txt
kylibs/common/: CMakeLists.txt
kylibs/common/include/: min.h  noexcept.h
metrics/: ExpectationCheckMetricsVisitor.cc  ExpectationCheckMetricsVisitor.cpp  ExpectationCheckMetricsVisitor.h  Metric.h  MetricContainer.h  MetricVisitor.h
readers/: FileReader.cc  FileReader.cpp  FileReader.h  HttpReader.cc  HttpReader.cpp  HttpReader.h  MemoryReader.cc  MemoryReader.cpp  MemoryReader.h  Reader.cc  Reader.cpp  Reader.h
src/: CMakeLists.txt  Config.h  Monitor.cc  Monitor.h  config.h  main.cc  monitor.cc  monitor.h  tests.cc
src/commands/: CMakeLists.txt  Command.cc  Command.h  PrepareCommand.cc  PrepareCommand.h  SyncCommand.cc  SyncCommand.h  command.cc  command.h  kysync_command.cc  kysync_command.h  prepare_command.cc  prepare_command.h  prepare_command_test.cc  sync_command.cc  sync_command.h
src/commands/impl/: CommandImpl.h  PrepareCommandImpl.h  SyncCommandImpl.h  command_impl.h  prepare_command_impl.h  sync_command_impl.h
src/commands/include/: command.h  kysync_command.h  prepare_command.h
src/commands/pb/: CMakeLists.txt  header.proto  header_adapter.cc  header_adapter.h
src/ky/common/: CMakeLists.txt  noexcept.cc  safe_cast_tests.cc
src/ky/common/include/ky/: noexcept.h  safe_cast.h
src/ky/process/: CMakeLists.txt  process_Darwin.cc  process_Linux.cc  process_Windows.cc  process_posix.cc  process_tests.cc  test_chat_bot.cc  test_file_chatter.cc  test_file_chatter.h  test_locations.h.in
src/ky/process/include/ky/: process.h
src/kysync/: CMakeLists.txt  main.cc  path_config.h.in
src/kysync/checksums/: CMakeLists.txt  strong_checksum.cc  strong_checksum_builder.cc
src/kysync/checksums/include/kysync/checksums/: weak_checksum.h
src/kysync/commands/: CMakeLists.txt  prepare_command.cc  sync_command.cc
src/kysync/commands/include/kysync/commands/: kysync_command.h  prepare_command.h  sync_command.h
src/kysync/commands/pb/: header_adapter.cc  header_adapter.h
src/kysync/readers/: CMakeLists.txt  http_reader.cc
src/kysync/readers/include/kysync/readers/: batch_retrieval_info.h  reader.h
src/kysync/streams/: CMakeLists.txt
src/kysync/test_commands/: CMakeLists.txt  gen_data_command.cc  gendata_main.cc  system_command.cc
src/kysync/test_commands/include/kysync/test_commands/: system_command.h
src/kysync/test_http_servers/: CMakeLists.txt  http_server.cc  nginx_server.cc
src/kysync/test_http_servers/include/kysync/test_http_servers/: http_server.h
src/kysync/tests/: CMakeLists.txt  dependency_tests.cc  expectation_check_metrics_visitor.cc  expectation_check_metrics_visitor.h  fixture.h  http_tests.cc  perf_tests.cc  tests.cc
src/readers/: CMakeLists.txt  FileReader.cc  FileReader.h  HttpReader.h  MemoryReader.cc  MemoryReader.h  Reader.cc  Reader.h  batch_retrieval_info.h  batched_retrieval_info.h  file_reader.cc  file_reader.h  http_reader.cc  http_reader.h  memory_reader.cc  memory_reader.h  posix_sequential_file_reader.cc  reader.cc  reader.h
src/readers/include/: file_reader.h  http_reader.h  memory_reader.h  posix_sequential_file_reader.h  reader.h
src/test/: CMakeLists.txt  basic_tests.cc  dependency_tests.cc  http_tests.cc
src/test/commands/: CMakeLists.txt  gen_data_command.cc  system_command.cc
src/test/commands/include/: gen_data_command.h  system_command.h
src/test/common/: CMakeLists.txt  expectation_check_metrics_visitor.cc  test_environment.cc  test_fixture.cc
src/test/common/include/: test_environment.h  test_fixture.h
src/test/http_servers/: nginx_server.cc
src/test/http_servers/include/: nginx_server.h
src/test/performance/: CMakeLists.txt  linux_cache_tests.cc  performance_test_fixture.cc  performance_test_fixture.h  performance_test_profile.cc  performance_test_profile.h  performance_tests.cc
src/test_commands/: CMakeLists.txt  gen_data_command.cc
src/test_commands/include/: gen_data_command.h
src/tests/: CMakeLists.txt  ExpectationCheckMetricsVisitor.cc  ExpectationCheckMetricsVisitor.h  TempPath.cc  TempPath.h  expectation_check_metrics_visitor.cc  expectation_check_metrics_visitor.h  fixture.cc  gendata.cc  gendata_main.cc  http_tests.cc  linux_cache_tests.cc  perf_tests.cc  performance_test_fixture.cc  performance_test_fixture.h  performance_test_profile.cc  performance_tests.cc  safe_cast_tests.cc  test_environment.cc  tests.cc  tests.md  tests_main.cc
src/tests/commands/: GenData.cc  GenData.h  GenDataCommand.cc  GenDataCommand.h  gen_data_command.cc  gen_data_command.h  system_command.cc  system_command.h
src/tests/http/: CMakeLists.txt  cli.cc  http_server.cc  http_server.h  server.cc  server.h
src/tests/http_server/: CMakeLists.txt  cli.cc  http_server.cc  http_server.h  nginx.conf.in  nginx_server.cc  nginx_server.h  nginx_server_conf.cmake  nginx_server_tests.cc
src/tests/utilities/: TempPath.cc  TempPath.h  fixture.cc  fixture.h  temp_path.cc  temp_path.h
test_data/: cert.pem  key.pem  test_file.txt  (+9 more)
(+108 files in other folders)
